# ESApp

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  README.rst  pyproject.toml  pytest.ini  setup.py  temp_test.py
.claude/: settings.local.json
docs/: Auxiliary File Format.txt  Subdata.txt  api.rst  conf.py  examples.rst  index.rst  overview.rst  requirements.txt  tutorial.rst  usage.rst
esa/: saw.py
esapp/: __init__.py  _descriptors.py  indexable.py  ts_fields.py  workbench.py
examples/: 01_basic_data_access.ipynb  01_basic_data_access.py  02_power_flow_analysis.ipynb  02_power_flow_analysis.py  03_contingency_analysis.ipynb  03_contingency_analysis.py  04_gic_analysis.py  05_matrix_extraction.py  06_advanced_reporting.py  07_network_expansion.ipynb  07_network_expansion.py  08_scopf_analysis.ipynb  08_scopf_analysis.py  09_atc_analysis.ipynb  09_atc_analysis.py  10_transient_stability_cct.ipynb  10_transient_stability_cct.py  __init__.py  cholmod.ipynb  dynamics.py  get_Gmat.ipynb  injection.py  map.py  mesh.py  plot_helpers.py  read_case.ipynb  readwrite.py  statics.py
gridwb/: __about__.py  __init__.py  adapter.py  gobject.py  indexable.py  indextool.py  saw.py  workbench.py
tests/: README.md  conftest.py  run_all_tests.py  test_buscat_unit.py  test_components.py  test_dynamics.py  test_exceptions.py  test_gobject.py  test_grid2d.py  test_grid_components.py  test_helpers_unit.py  test_indexing.py  test_indextool.py  test_integration_analysis.py  test_integration_buscat.py  test_integration_contingency.py  test_integration_extended.py  test_integration_network.py  test_integration_powerflow.py  test_integration_saw_contingency.py  test_integration_saw_core.py  test_integration_saw_gic.py  test_integration_saw_modify.py  test_integration_saw_operations.py  test_integration_saw_powerflow.py  test_integration_saw_powerworld.py  test_integration_saw_transient.py  test_integration_workbench.py  test_online_adapter.py  test_online_components.py  test_online_saw.py  test_online_workbench.py  test_saw.py  test_saw_core_methods.py  test_saw_unit.py  test_utils.py  test_workbench.py
(+210 files in other folders)
